--- a/style.css
+++ b/style.css
@@ -36,5 +36,15 @@ body{
     width: 112px;
     border: 2px solid black;
     border-radius: 50%;
+}
 
+#profile p {
+    font-size: 18px;
+    font font-weight: 500;
+    line-height: 24px;
+    margin: auto;
+}
+#profile p1 {
+    font-size: 10px;
+    font-weight: 100;
 }
