--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
 }
 
 :root{
-    --bg-url: url(./assets/img_0240.jpg);
-    --text-color: black;
+    --bg-url: url(./assets/bg-light.jpg);
+    --text-color:  rgba(255, 255, 255, 1);
+    --surface-color:  rgba(255, 255, 255, 0.05);
+    --surface-color-hover:  rgba(255, 255, 255, 0.1);
+    --border-color:  rgba(255, 255, 255, 0.5);
+    --highlight-color:  rgba(255, 255, 255, 0.1)
 }
-
 body {
     background: var(--bg-url) no-repeat top center/cover;
     background-size: cover;
@@ -34,7 +37,7 @@ body{
 }
 #profile img{
     width: 112px;
-    border: 2px solid black;
+    border: 2px solid var(--text-color);
     border-radius: 50%;
 }
 
@@ -43,8 +46,48 @@ body{
     font font-weight: 500;
     line-height: 24px;
     margin: auto;
+    color: var(--text-color);
 }
 #profile p1 {
     font-size: 10px;
     font-weight: 100;
+    color: var(--text-color);
+}
+
+/*links*/
+
+ul {
+    
+    display: flex;
+    flex-direction: column;
+    
+    
+    gap: 24px;
+    padding: 24px 0px;
+    list-style: none;
+    font-weight: 600;
+}
+
+ul li a {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    text-decoration: none;
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+    padding: 4px;
+    border-radius: 6px;
+    background-color: var(--surface-color);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    transition: background 0.2s;
+}
+
+/*pseudo selector*/
+
+ul li a:hover {
+    border: 1.5px solid var(--border-color);
+
+    background-color: var(--surface-color-hover);
+    outline: 4px solid var(--highlight-color);
 }
