--- a/style.css
+++ b/style.css
@@ -8,10 +8,18 @@
     --surface-color:  rgba(255, 255, 255, 0.05);
     --surface-color-hover:  rgba(255, 255, 255, 0.1);
     --border-color:  rgba(255, 255, 255, 0.5);
-    --highlight-color:  rgba(255, 255, 255, 0.1)
+    --highlight-color:  rgba(255, 255, 255, 0.2);
+    --switch-bg-url:  url(/assets/sun.svg) no-repeat center;
 }
 
 .dark {
+    --bg-url: url(./assets/IMG_0240.jpg);
+    --text-color:  rgb(84, 84, 84);
+    --surface-color:  rgba(0, 0, 0, 0.05);
+    --surface-color-hover:  rgba(0, 0, 0, 0.1);
+    --border-color:  rgba(0, 0, 0, 0.5);
+    --highlight-color:  rgba(0, 0, 0, 0.1);
+    --switch-bg-url:  url(./assets/moon.svg) no-repeat center;
 
 }
 
@@ -48,7 +56,7 @@ body{
 
 #profile p {
     font-size: 28px;
-    font font-weight: 500;
+   font-weight: 500;
     line-height: 24px;
     margin: auto;
     color: var(--text-color);
@@ -58,6 +66,42 @@ body{
     font-weight: 100;
     color: var(--text-color);
 }
+/*switch*/
+#switch {
+    position: relative;
+    width: 64px;
+    margin: 4px auto;
+}
+
+#switch button {
+    width: 32px;
+    height: 32px;
+    border: 0;
+    border-radius: 50%;
+    background: white  var(--switch-bg-url);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translateY(-50%);
+}
+
+.dark #switch button {
+    animation: slide-in 0.4s forwards;
+}
+
+#switch span {
+    display: block;
+    width: 64px;
+    height: 24px;
+    background: var(--surface-color);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 9999px;
+    border: 1px solid var(--border-color);
+
+}
+
 
 /*links*/
 
@@ -87,6 +131,7 @@ ul li a {
     transition: background 0.2s;
 }
 
+
 /*pseudo selector*/
 
 ul li a:hover {
@@ -97,3 +142,33 @@ ul li a:hover {
 }
 
 /*social links*/
+
+
+#socials {
+    display: flex;
+    justify-content: center;
+  padding: 24px 0;
+  font-size: 32px;
+}
+
+#socials a {
+    display: flex;
+    align-items: center;
+    padding: 16px;
+    border-radius: 50%;
+    color: var(--text-color);
+   transition: background 0,2s;
+
+}
+
+#socials a:hover {
+    background: var(--highlight-color);
+    padding: 16px;
+}
+
+
+footer {
+    display: flex;
+    color: var(--text-color);
+    justify-content: center;
+}
