switch button function and animation, prof/bg query selection

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --surface-color-hover:  rgba(0, 0, 0, 0.1);
     --border-color:  rgba(0, 0, 0, 0.5);
     --highlight-color:  rgba(0, 0, 0, 0.1);
-    --switch-bg-url:  url(./assets/moon.svg);
+    --switch-bg-url:  url(./assets/sun.svg);
 }
 
 .dark {
@@ -21,7 +21,7 @@
     --highlight-color:  rgba(255, 255, 255, 0.2);
 
 
-    --switch-bg-url:  url(./assets/sun.svg);
+    --switch-bg-url:  url(./assets/moon.svg);
 
 }
 
@@ -69,10 +69,11 @@ body{
     color: var(--text-color);
 }
 /*switch*/
-#switch {
+ #switch {
     position: relative;
     width: 64px;
     margin: 4px auto;
+    animation: slide-in 0.3s forwards;
 }
 
 #switch button {
@@ -91,6 +92,7 @@ body{
 .dark #switch button {
     right: 0;
     left: initial;
+    animation: slide-out 0.3s backwards;
 
 }
 
@@ -106,6 +108,9 @@ body{
 
 }
 
+#switch button:hover {
+outline: 8px solid var(--highlight-color);
+}
 
 /*links*/
 
@@ -175,4 +180,31 @@ footer {
     display: flex;
     color: var(--text-color);
     justify-content: center;
+}
+
+@media (max-width: 700px) {
+    :root {
+        --bg-url: url( ./assets/modile-light.jpg);
+    }
+    .dark {
+        --bg-url: url(./assets/mobile-dark.jpg);
+    }
+}
+
+@keyframes slide-out {
+    from{
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
+    }
 }
